# k230_burning_tool

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  PreLoad.cmake  README.md  release.sh  release_macos.sh  vcpkg.json
.github/workflows/: build.yml
canaan-burn/: CMakeLists.txt
canaan-burn/burn/k230/: k230_burn.c  k230_burn.isp.c
canaan-burn/include/canaan-burn/: canaan-burn.h
canaan-burn/include/canaan-burn/exported/: static-assert.h  types.h
canaan-burn/include/private/: base.h  context.h
canaan-burn/include/private/lib/: device.h
canaan-burn/include/private/lib/basic/: array.h  disposable.h  errors.h  event-queue.h  lock.h  macros.alloc.h  macros.function.h  macros.public_interface.h  resource-tracker.h  sleep.h  string.h
canaan-burn/include/private/lib/components/: call-user-handler.h  device-link-list.h  queued-thread.h  thread-condition.h  thread-pool.h  thread.h
canaan-burn/include/private/lib/debug/: assert.h  color.h  level.h  low.h  path.h  print.h  user-callback.h
canaan-burn/include/private/monitor/: context.h  descriptor.h  handshake.h  libusb.list.h  lifecycle.h  monitor.h  subsystem.h  usb_types.h
canaan-burn/include/private/usb/: descriptor.h
canaan-burn/include/public/: canaan-burn.h  context.h  debug.h  errors.h  k230_burn.h  types.h  types.usb.h  usb.isp.h
canaan-burn/k230_burn/: k230_burn.isp.c
canaan-burn/lib/: context.c  context.h  device.c  device.error.c  device.h
canaan-burn/lib/basic/: array.c  crc32.c  disposable.c  errors.c  event-queue.c  lock.c  resource-tracker.c  sleep.c  string.c
canaan-burn/lib/components/: call-user-handler.c  call-user-handler.h  device-link-list.c  device-link-list.h  queued-thread.c  thread-condition.c  thread-pool.c  thread.c
canaan-burn/lib/debug/: assert.c  color.c  level.c  low.c  path.c  print.c  user-callback.c
canaan-burn/monitor/: chip.c  chip.k230.c  descriptor.c  handshake.c  handshake.k230.c  libusb.list.c  lifecycle.c  monitor.c  monitor.libusb.c  monitor.polling.posix.c  monitor.polling.win32.c  monitor.usb.c  settings.c  subsystem.c
canaan-burn/usb/: descriptor.c  isp.h  isp.stage1.c  libusb.list.c  lifecycle.c  settings.c  subsystem.c
gui/: CMakeLists.txt  linux-install.cmake  mac-install.cmake  win-install.cmake
gui/resources/: AppRun  Info.plist  K230BurningTool.desktop  icon.icns  icon_avalon.icns  main.qrc
gui/resources/translations/: K230_qt_en.qm  K230_qt_en.ts  K230_qt_zh_CN.ts
gui/scripts/: makedmg.sh
gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  config.h.in  main.cpp  main.h  qt_zh_CN.ts  version.cpp
gui/src/common/: AppGlobalSetting.cpp  AppGlobalSetting.h  BurnImageItem.h  BurnLibrary.cpp  BurnLibrary.h  BurningProcess.cpp  BurningProcess.h  BurningRequest.cpp  BurningRequest.h  CustomTableView.cpp  CustomTableView.h  EventStack.cpp  EventStack.h  K230BurningProcess.cpp  K230BurningProcess.h  KdImageParser.cpp  KdImageParser.h  MyException.h  SettingsHelper.cpp  UpdateChecker.cpp
gui/src/widgets/: AnimatedButton.cpp  AnimatedButton.h  BurningControlWindow.cpp  BurningControlWindow.h  BurningControlWindow.ui  LoggerWindow.cpp  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  SingleBurnWindow.cpp  SingleBurnWindow.h  SingleBurnWindow.ui  StateMessage.cpp
test-binary/: CMakeLists.txt
test-binary/src/: main.cpp
